adding rout rules with auth-guard-service

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,17 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
   <h5 class="my-0 mr-md-auto font-weight-normal">Company name</h5>
   <nav class="my-2 my-md-0 mr-md-3">
-    <a class="p-2 text-dark" href="#">Features</a>
-    <a class="p-2 text-dark" href="#">Enterprise</a>
-    <a class="p-2 text-dark" href="#">Support</a>
-    <a class="p-2 text-dark" href="#">Pricing</a>
+    <a class="p-2 text-dark" routerLink="/games">Games</a>
+    <a class="p-2 text-dark" routerLink="/admin/games" *ngIf="isAuth">Admin games</a>
   </nav>
 
-  <a class="btn btn-outline-primary mx-1" routerLink="auth/signup">Sign up</a>
-  <a class="btn btn-outline-success mx-1" routerLink="auth/signin">Sign in</a>
+  <div *ngIf="!isAuth">
+    <a class="btn btn-outline-primary mx-1" routerLink="auth/signup">Sign up</a>
+    <a class="btn btn-outline-success mx-1" routerLink="auth/signin">Sign in</a>
+  </div>
+
+  <div *ngIf="isAuth">
+    <a class="btn btn-outline-secondary mx-1" (click)="onSignOut()" >Sign out</a>
+  </div>
 
 </div>
