adding html and methods for games-list, single and service

--- a/src/app/game-list/single-game/single-game.component.html
+++ b/src/app/game-list/single-game/single-game.component.html
@@ -1,1 +1,6 @@
-<p>single-game works!</p>
+<article>
+  <h1>{{ game.name }}</h1>
+  <h3>{{ game.author }}</h3>
+  <p>{{ game.synopsis }}</p>
+  <button class="btn btn-default" (click)="onBack()">Revenir à la liste des jeux</button>
+</article>
