--- a/src/app/game-list/game-list.component.html
+++ b/src/app/game-list/game-list.component.html
@@ -1,17 +1,10 @@
-<div class="card-deck mb-3 text-center">
-  <article class="card mb-4 shadow-sm">
+<div class="card-deck mb-3 text-center" *ngFor="let game of games; let i = index">
+  <a (click)="onViewBook(i)" class="card mb-4 shadow-sm">
     <div class="card-header">
-      <h4 class="my-0 font-weight-normal">Free</h4>
+      <h4 class="my-0 font-weight-normal">{{ game.name }}</h4>
     </div>
     <div class="card-body">
-      <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
-      <ul class="list-unstyled mt-3 mb-4">
-        <li>10 users included</li>
-        <li>2 GB of storage</li>
-        <li>Email support</li>
-        <li>Help center access</li>
-      </ul>
-      <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
+      <h1 class="card-title pricing-card-title">{{ game.price | currency }} <small class="text-muted">/ mo</small></h1>
     </div>
-  </article>
+  </a>
 </div>
