--- a/src/app/admin/admin-game-list/admin-game-list.component.html
+++ b/src/app/admin/admin-game-list/admin-game-list.component.html
@@ -1,1 +1,27 @@
-<p>admin-game-list works!</p>
+<h1 class="text-white">Liste des jeux</h1>
+
+<button class="btn btn-success my-3" (click)="onNewGame()">Ajouter un nouveau jeux</button>
+
+<table class="table" >
+  <thead class="thead-dark">
+  <tr>
+    <th scope="col">#</th>
+    <th scope="col">Nom</th>
+    <th scope="col">Auteur</th>
+    <th scope="col">Prix</th>
+    <th scope="col">Option</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let game of games; let i = index" class="text-white">
+    <th scope="row">{{ i }}</th>
+    <td>{{ game.name }}</td>
+    <td>{{ game.author }}</td>
+    <td>{{ game.price }} €</td>
+    <td class="text-center">
+      <button class="btn btn-info mx-1" (click)="onViewGame(i)"><i class="fas fa-info"></i></button>
+      <button class="btn btn-danger mx-1" (click)="onDeleteGame(game)"><i class="fas fa-trash-alt"></i></button>
+    </td>
+  </tr>
+  </tbody>
+</table>
