add button supprimer in single-game

--- a/src/app/game-list/single-game/single-game.component.html
+++ b/src/app/game-list/single-game/single-game.component.html
@@ -5,4 +5,5 @@
   <p *ngIf="game.synopsis">{{ game.synopsis }}</p>
   <br>
   <button class="btn btn-light my-3" (click)="onBack()">Revenir à la liste des jeux</button>
+  <button class="btn btn-danger" (click)="onDeleteGame(game)">Supprimer</button>
 </article>
