change css of game-list

--- a/src/app/admin/admin-game-list/admin-game-list.component.html
+++ b/src/app/admin/admin-game-list/admin-game-list.component.html
@@ -20,6 +20,7 @@
     <td>{{ game.price }} €</td>
     <td class="text-center">
       <button class="btn btn-info mx-1" (click)="onViewGame(i)"><i class="fas fa-info"></i></button>
+      <button class="btn btn-primary mx-1" (click)="onEditGame(i)"><i class="fas fa-edit"></i></button>
       <button class="btn btn-danger mx-1" (click)="onDeleteGame(game)"><i class="fas fa-trash-alt"></i></button>
     </td>
   </tr>
