--- a/src/app/game-list/single-game/single-game.component.html
+++ b/src/app/game-list/single-game/single-game.component.html
@@ -1,9 +1,8 @@
 <article class="text-white text-center">
   <h1>{{ game.name }}</h1>
-  <h3>{{ game.author }}</h3>
   <img *ngIf="game.image" [src]="game.image" alt="image-of-{{ game.name }}">
-  <p *ngIf="game.synopsis">{{ game.synopsis }}</p>
+  <h3 class="my-3">{{ game.author }}</h3>
+  <p *ngIf="game.synopsis" class="my-3">{{ game.synopsis }}</p>
   <br>
   <button class="btn btn-light my-3" (click)="onBack()">Revenir à la liste des jeux</button>
-  <button class="btn btn-danger" (click)="onDeleteGame(game)">Supprimer</button>
 </article>
